# langgraph-learning

./: .gitignore  main.py  pyproject.toml
mcp/: mcp_client.py  mcp_server.py  simple_mcp_server.py
notebooks/: chapter1.ipynb  chapter10.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb  chapter8.ipynb  chapter9.ipynb  production.db-shm  production.db-wal
notebooks/faiss_memory/: index.faiss  index.pkl
notebooks/production_memory/episodic/: index.faiss  index.pkl
notebooks/production_memory/procedural/: index.faiss  index.pkl
notebooks/production_memory/semantic/: index.faiss  index.pkl
notes/: Agent_system_architecture_design_guide.md  TOC.md  bonus_chapter.md  chapter1.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter2.md  chapter3.md  chapter4.md  chapter5(bonus).md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md  reference_sheet.md
