[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.81",
    "langchain-ollama>=0.3.10",
    "langgraph>=0.6.11",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp[cli]>=1.25.0",
    "transformers>=4.57.3",
]
